css/style.css
* {
  box-sizing: border-box;
}

/*JS HEADER*/

.header {
  padding: 10px 16px;
  background: #FFF;
  color: #f1f1f1;
}
.content {
  padding: 16px;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.sticky + .content {
  padding-top: 102px;
}

/* BODY */


html {
  font-size: 10px;
}

body {
  background-color: #fcfcfc;
  font-family: Lato;
}

b {
  font-weight: 600;
}

i {
  font-style:italic;
}

h1 {
  font-size: 2.4rem;
  letter-spacing: -.5px;
  line-height: 115%;
}

h2 {
  font-size: 1.8rem;
  letter-spacing: -.5px;
  line-height: 115%;
}

h6 {
  font-family: Montserrat Subrayada;
}

section {
  color: #312F30;
  margin-top: .5rem;
  padding: .5rem .5rem;
}

/* HERO */

.heroContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1.5fr 1fr;
  grid-gap: 1rem;
  margin: 0 auto;
  width: 95vw;
}

.logoBg img {
  grid-row: 1;
  grid-column: 1;
  position: absolute;
  max-width: 95vw;
  z-index: 0;
}

 .largeSelf {
  grid-column: 2;
  grid-row: 2;
  position: relative;left:-2rem;
  z-index: 1;
}

.largeSelf img {
  width: 30vw;
}

.heroText  {
  grid-column: 1 / -1;
  grid-row-start: 3;
  position: relative;top:-.75rem;
  z-index: 3;
}

/* MIDDLE DIV */

#space10 {
  letter-spacing: 1.5px;
}

.middleContainer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 1rem;
  margin: 0 auto;
  width: 95vw;
}

.greenDiv {
  grid-column: 1 / 3;
  grid-row: 2;
}

.greenDiv img {
  position: relative;left: 3rem;
  width: 75vw;
}

.middleText {
  grid-column: 1 / 3;
  grid-row: 1;
  padding-top: 5rem;
  padding-bottom: 5rem;
  width: 95vw;
}

/* CACHE */

.projectContainer {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-gap: 1rem;
  margin: 0 auto;
  width: 95vw;
}

.cacheTriangle2 {
  grid-column: 1 / span 3;
  grid-row: 1 / span 3;
  z-index: 4;
}

.cacheTriangle2 img {
  width: 95vw;
}

.cacheHeader {
  font-weight: 1000;
  font-size: 3.6rem;
  grid-row: 1;
  grid-column: 2 / 3;
  letter-spacing: .5rem;
  line-height: 110%;
  padding-top: 1.5rem;
  text-align: center;
  z-index: 5;
}

.cacheMockup {
  grid-column: 1 / span 3;
  grid-row: 2 / span 3;
  position:relative;bottom: 5rem;
  z-index: 6;
}

.cacheMockup img {
  width: 95vw;
}

.cacheSub {
  font-size: 1.6rem;
  grid-column: 2 / 4;
  grid-row: 4;
  padding-top: 1rem;
  padding-bottom: 1.5rem;
  position: relative;left: -3rem;
  z-index:7;
}

.caseStudyButton {
  grid-column: 2 / 3;
  grid-row: 5;
  position: relative;left:2.5rem;
}


/* FOOTER */

#page-container {
  position: relative;
  min-height: 100vh;
}

#content-wrap {
  padding-bottom: 25rem;    /* Footer height */
}

#footer {
  background-image: url("/images/footerBg.png");
  background-size: contain;
  background-repeat: repeat;
  border-top: 2rem;
  border-color: black;
  bottom: 0;
  display: grid;
  grid-template-rows: repeat(6, 25px);
  height: 15rem;            /* Footer height */
  position: absolute;
  width: 100%;
}

.footer1text {
  font-size: 2rem;
  font-weight: 500;
}

.footer2text {
  font-size: 2.8rem;
  font-weight: 1000;
  letter-spacing: 1px;
  text-align: center;
}

.footer3text {
  font-size: 1.4rem;
  font-family: Encode Sans Condensed;
}

.gitIcon img {

}

.twitterIcon img {

}

.mailIcon img {

}
/*
@media (min-width: 400px) {
  /* .largeSelf img {
      width: 45vw;
  } */
/*
  .cacheMockup img {
      max-width: 355px;
  } */

  /* .triangle-topleft {
      width: 100vw;
  }
} */

